// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test acquireWebhook endpoint Can fetch webhook 1`] = `
Object {
  "webhook": Array [
    Object {
      "headers": Array [
        Object {
          "key": "header-key-1",
          "value": "header-value-1",
        },
        Object {
          "key": "header-key-2",
          "value": "header-value-2",
        },
      ],
      "url": "https://www.google.com",
    },
  ],
}
`;

exports[`Test acquireWebhook endpoint Can fetch webhook and associated headers 1`] = `
Object {
  "webhook": Array [
    Object {
      "headers": Array [
        Object {
          "key": "header-key-1",
          "value": "header-value-1",
        },
        Object {
          "key": "header-key-2",
          "value": "header-value-2",
        },
      ],
      "url": "https://www.google.com",
    },
  ],
}
`;

exports[`Test acquireWebhook endpoint Cannot fetch webhook without the right context 1`] = `
Object {
  "webhook": Array [
    Object {
      "headers": Array [
        Object {
          "key": "header-key-1",
          "value": "header-value-1",
        },
        Object {
          "key": "header-key-2",
          "value": "header-value-2",
        },
      ],
      "url": "https://www.google.com",
    },
    Object {
      "headers": Array [],
      "url": "https://www.google.com",
    },
  ],
}
`;
